<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".hesaplasayfa">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kilo"
        android:textColor="@android:color/background_light"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/edt1"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_alignParentRight="true"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/kilohint"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@android:color/black" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt1"
        android:text="@string/boy"
        android:textColor="@android:color/background_light"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/edt2"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_below="@id/txt1"
        android:layout_alignParentRight="true"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/boyhint"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@android:color/black" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:onClick="hesapla"
        android:text="Hesapla"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text=""
        android:textColor="@android:color/background_light"
        android:textSize="50dp" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt3"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="@android:color/background_light"
        android:textSize="50dp" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_below="@id/txt4"
        android:layout_centerHorizontal="true"
        android:background="@drawable/food" />

</RelativeLayout>