<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/giris"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/food"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_below="@id/giris"
        android:layout_marginLeft="25dp"
        android:background="@drawable/diet"
        android:onClick="openActivity2"
        android:text="@string/diett"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="170dp"
        android:layout_height="180dp"
        android:layout_below="@id/giris"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/button"
        android:background="@drawable/gameboy"
        android:onClick="openActivity3"
        android:text="@string/oyun"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_below="@id/button"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bathroomscale"
        android:onClick="openActivity4"
        android:text="@string/takip"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="180dp"
        android:layout_height="160dp"
        android:layout_below="@id/button2"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/button3"
        android:layout_marginTop="30dp"
        android:background="@drawable/ex"
        android:text="Egzersiz"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:onClick="openActivity5"/>

</RelativeLayout>